--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,132 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+
+@layer base {
+  body {
+    @apply font-[Raleway];
+  }
+  li {
+    @apply px-4;
+    @apply cursor-pointer;
+    @apply hover:text-cyan-500;
+    @apply hover:shadow-cyan-500;
+  }
+}
+
+body {
+  background-color: #111827;
+}
+
+ul.features-list {
+  margin: 0;
+  padding-left: 0.1em;
+}
+
+.features-list li {
+  font-size: 1.1em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  position: relative;
+}
+
+.features-list li:before {
+  content: "";
+  left: -2em;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url("./assets/img/checkmark.png");
+  background-size: contain;
+  margin-right: 0.5em;
+  margin-top: 0.3em;
+}
+
+.features img {
+  display: none;
+}
+
+input,
+textarea:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+input::placeholder,
+textarea::placeholder {
+  font-size: 0.8rem;
+}
+
+.project1 {
+  background-image: url("./assets/img/shonancoffee.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.7;
+}
+
+.project2 {
+  background-image: url("./assets/img/dezaincode.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.project3 {
+  background-image: url("./assets/img/digitalcamp.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.project4 {
+  background-image: url("./assets/img/sushihouse.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.project5 {
+  background-image: url("./assets/img/jitensaya.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.project6 {
+  background-image: url("./assets/img/headphone.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: 30%;
+}
+
+.top-return-btn {
+  position: absolute;
+  top: 35%;
+  left: 49%;
+  z-index: 10;
+}
+
+@media (min-width: 760px) {
+  .card:nth-of-type(2) {
+    grid-column: 2 / 4;
+  }
+
+  .card img {
+    width: 55px;
+    height: 55px;
+  }
+}
+
+@media (min-width: 650px) {
+  .features {
+    position: relative;
+  }
+
+  .features img {
+    display: block;
+    position: absolute;
+    width: 250px;
+    right: 0.1em;
+    bottom: 4em;
+  }
+}
